--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@ body {
     }   
     .cards-section {
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
     .cards-section > * {
         margin-right: 0;
         width: 45%;
         height: auto;
         padding: 15% 0;
+        margin-left: auto;
+        margin-right: auto;
     }
     .cards-section > * img {
         width: 80%;
