--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
     width: 100%;
 }
 .cards-section > * {
-    background-color: #99CEA8;
     width: 117px;
     height: 146px;
     border-radius: 5px;
@@ -46,16 +45,56 @@ body {
 .hidden {
     display: none;
 }
-.parrot1, .parrot2, .parrot3, .parrot4, .parrot5, .parrot6, .parrot7 {   
-    width: 117px;
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: auto;
+.flip-card {
+    perspective: 1000px;
 }
-.selected {
-    transform: rotateY('180deg');
-}
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .clicked .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  .unclicked .flip-card-inner {
+    transform: rotateY(-180deg);
+  }
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #99CEA8;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: #86be97;
+    color: white;
+    transform: rotateY(180deg);
+  }
+  .matched {
+    transition-delay: 0.5s;
+    transition-duration: 0.2s;
+    box-shadow: 0px 0px 23px -1px rgba(26,171,49,0.83);
+  }
 
 @media screen and (max-width: 629px) {
     h1 {
