--- a/style.css
+++ b/style.css
@@ -95,6 +95,21 @@ body {
     transition-duration: 0.2s;
     box-shadow: 0px 0px 23px -1px rgba(26,171,49,0.83);
   }
+  .timer {
+    position:  absolute;
+    top: 0;
+    right: 0;
+    width: 130px;
+    height: 70px;
+    background-color: #86be97;
+    color: #ffffff;
+    border-bottom-left-radius: 12px;
+    display: flex;
+    font-size: 30px;
+    font-weight: 100;
+    justify-content: center;
+    align-items: center;
+  }
 
 @media screen and (max-width: 629px) {
     h1 {
@@ -106,16 +121,17 @@ body {
         flex-direction: column;
     }
     .cards-section > * {
-        margin-right: 0;
-        width: 45%;
-        max-width: 117px;
-        height: auto;
-        padding: 5% 0;
+
         margin-left: auto;
         margin-right: auto;
     }
     .cards-section > * img {
         width: 80%;
         height: auto;
+    }
+    .timer {
+        width: 80px;
+        height: 45px;
+        font-size: 25px;
     }
 }
